# gather-microbenchmark

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  run_microbenchmark.sh
gathermicrobench/: CMakeLists.txt  benchmark_params.hpp  generate_data.c  generate_data.h  generate_data.hpp  microarch.h  microbenchmark.c  microbenchmark.cpp  run_benchmark.hpp  timers.h
gathermicrobench/kernels/: avx2.h  avx512.h  kernels_common.h  scalar.h  sse.h  sve.h
microbenchmark/: microbenchmark.c
microbenchmark/kernels/: avx2_256_32bits.c  avx2_256_32bits.h
